--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -1,6 +1,7 @@
 
 // -- Colour -- //
 $brand: #00b298;
+$brand-lighter: #e9f9f6;
 $brand-light: #4dd6b2;
 $brand-med: #008f7a;
 $brand-dark: #0e6b64;
