--- a/src/styles/layout/forms.scss
+++ b/src/styles/layout/forms.scss
@@ -6,6 +6,21 @@ form {
 
 fieldset {
   padding: 0;
+  width: 100%;
+  border: none;
+  @media #{$sw-large} {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+
+    div {
+      flex: 2 0 0;
+      padding: 0 $spacing-small;
+      &:first-child { padding-left: 0; }
+      &:first-child { padding-right: 0; }
+    }
+  }
 }
 
 legend {
@@ -33,7 +48,10 @@ input, select, textarea {
   margin: 0 0 $spacing-med;
 }
 
-input, textarea { width: 100%; }
+input, textarea {
+  width: 100%;
+  display: block;
+}
 
 // -- Show the overflow in Edge. -- //
 button,
