--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -131,7 +131,14 @@ code,
 kbd,
 samp {
   font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
+  font-size: 1rem; /* 2 */
+}
+
+pre {
+  margin: 1rem;
+  padding: 1rem;
+  background: $grey1;
+  color: $grey4;
 }
 
 /* stylelint-enable */
