--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -50,8 +50,8 @@ $button-height: 2rem;
 $baseline-height: 1.375rem;
 
 // -- Font Stacks -- //
-$body-font: "Avenir", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
-$header-font: "GT-Walsheim-Bold", sans-serif !default;
+// $body-font: "GT-Walsheim", "Avenir", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
+// $header-font: "GT-Walsheim", sans-serif !default;
 
 // -- Media Queries -- //
 $sw-small: 'screen and (max-width: 32em)'; // use sparingly
