--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -19,7 +19,7 @@ button,
 input,
 select,
 textarea {
-  font-family: $body-font;
+  font-family: "GT-Walsheim", "Avenir", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1rem;
   line-height: 1;
   color: $black;
@@ -45,64 +45,83 @@ menu {
   display: block;
 }
 
-p {
-  font-size: 1rem;
-  line-height: $baseline-height;
-  margin-bottom: $spacing;
-}
-
 h1 {
-  font-family: $header-font;
-  font-size: 1.875rem;
-  line-height: $baseline-height;
+  font-weight: bold;
+  font-size: 1.5rem;
+  line-height: 1.875rem;
+  margin: 0;
+  padding: 1.875rem 0 1rem;
+  max-width: 100%;
 }
 
 h2 {
-  font-family: $header-font;
-  font-size: 1.5rem;
-  line-height: $baseline-height*1.5;
-  padding: $baseline-height/4 0;
+  font-weight: bold;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  margin: 0;
+  padding: 1.75rem 0 1rem;
+  max-width: 100%;
 }
 
 h3 {
-  font-family: $header-font;
-  font-size: 1.25rem;
-  line-height: $baseline-height;
-  padding: $baseline-height/2 0;
+  font-weight: bold;
+  font-size: 1.125rem;
+  line-height: 1.5rem;
+  margin: 0;
+  padding: 1.5rem 0 1rem;
+  max-width: 100%;
 }
 
 h4 {
-  font-family: $header-font;
   font-size: 1rem;
-  line-height: $baseline-height;
-  padding: $baseline-height/2 0;
+  line-height: 1.375rem;
+  margin: 0;
+  padding: 1.375rem 0 1rem;
+  max-width: 100%;
 }
 
-h5 {
-  font-family: $body-font;
-  font-size: 1.125rem;
-  line-height: $baseline-height;
+p {
+  padding: 0 0 1rem;
 }
 
-strong {
-  font-weight: 600;
+hr {
+  border: none;
+  background: #4dd6b2;
+  height: 1px;
+  margin: 0;
+  padding: 0;
 }
 
-em {
-  font-style: normal;
-  color: $grey3;
+svg {
+  width: auto;
+  height: auto;
 }
 
-small {
-  font-size: 0.875rem;
-  // line-height: 1.375rem;
-}
-
-a {
-  color: $brand;
+a,
+button {
+  font-family: "Avenir", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: normal;
+  color: #00b298;
   text-decoration: underline;
-  a:hover, &:focus { color: $brand-light; }
-  &:visited { color: $brand-med; }
+  text-decoration-color: #4dd6b2;
+  //text-decoration-skip-ink: auto;
+  display: inline-block;
+  -moz-appearance: none;
+  cursor: pointer;
+  font-size: 1rem;
+  line-height: 1.375rem;
+  background: none;
+  padding: 0;
+  border: 0;
+  transition: all 150ms ease;
+}
+
+a:hover,
+a:focus,
+button:hover,
+button:focus {
+  text-decoration-color: #00b298;
+  transition: all 150ms ease;
 }
 
 ul {
