--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,6 @@
 @import 'base/variables';
 @import 'base/fonts';
 @import 'base/typography';
+@import 'layout';
 
 @import '~animate.css/animate.css';
