--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,6 +1,7 @@
 @import 'base/variables';
 @import 'base/fonts';
 @import 'base/typography';
-@import 'layout';
+@import 'layout/lists';
+@import 'layout/navigation';
 
 @import '~animate.css/animate.css';
