--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -59,53 +59,54 @@ menu {
 }
 
 h1 {
+  font-size: 2.25rem;
+  line-height: 3rem;
+  padding: 1.875rem 0 1rem;
   font-weight: bold;
-  font-size: 1.5rem;
-  line-height: 1.875rem;
-  padding: 0;
-  margin: 1.875rem 0 1rem;
-  max-width: 100%;
 }
 
 h2 {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+  padding: 1.875rem 0 1rem;
   font-weight: bold;
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-  margin: 0;
-  margin: 1.75rem 0 1rem;
-  max-width: 100%;
 }
 
 h3 {
+  font-size: 1.5rem;
+  line-height: 1.875rem;
+  padding: 1.5rem 0 1rem;
   font-weight: bold;
-  font-size: 1.125rem;
-  line-height: 1.5rem;
-  padding: 0;
-  margin: 1.5rem 0 1rem;
-  max-width: 100%;
 }
 
 h4 {
-  font-size: 1rem;
-  line-height: 1.375rem;
-  padding: 0;
-  margin: 1.375rem 0 1rem;
-  max-width: 100%;
+  font-size: 1.25rem;
+  line-height: 1.625rem;
+  padding: 1.25rem 0 1rem;
+  font-weight: bold;
+}
+
+h5 {
+  font-size: 1.125rem;
+  line-height: 1.5rem;
+  padding: 1.125rem 0 1rem;
+  font-weight: bold;
 }
 
 p {
+  font-size: 1rem;
+  line-height: $baseline-height;
   margin: 0 0 1rem;
 
   &.large {
     font-size: 1.125rem;
     line-height: 1.5rem;
-    margin: 0 0 1.125rem;
   }
 
   &.small {
     font-size: 0.875rem;
-    line-height: 1.125rem;
-    margin: 0 0 0.875rem;
+    line-height: 1.25rem;
+    margin: 0.875rem 0;
   }
 }
 
@@ -144,9 +145,13 @@ button:focus {
 input {
   margin: $spacing-small 0;
   border-radius: $spacing-tiny;
-  border: 1.5px solid $grey;
+  border: 1px solid $grey;
   padding: $spacing-tiny;
   background-color: $verylightgrey;
+}
+
+ol {
+  font-family: "GT-Walsheim", "Avenir", "Helvetica Neue", Helvetica, Arial, sans-serif, monospace;
 }
 
 ul {
