--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -142,11 +142,13 @@ button:focus {
   color: #008579;
   background-color: #e0f5f2;
   transition: all 150ms ease;
+  text-decoration: none;
 }
 
 a:active,
 a:focus {
   text-decoration: none;
+  color: #00b298;
 }
 
 input {
