remove search, make side menu sticky, remove toggle, add desktop and mobile toggle to header and units

--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -6,6 +6,8 @@ $brand-light: #4dd6b2;
 $brand-med: #008f7a;
 $brand-dark: #0e6b64;
 $brand-lightest:#d4e5de;
+$brand-mint: #ecf9f7;
+$pre-background: #eef6f4;
 
 $color2: #4464e4;
 $color2-light: #7994fe;
@@ -33,7 +35,7 @@ $negative: $alert;
 // -- Greyscale -- //
 $white: #fff;
 $verylightgrey: #f6f7f8;
-$lightgrey: #f1f1f1;
+$lightgrey:  #e4e4ea;
 $grey: #dfdfdf;
 $darkgrey: #bbb;
 $lightblack: #777;
