--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -176,7 +176,7 @@ hr {
   box-sizing: content-box;
   height: 1px;
   margin: 1rem 0;
-  background-color: $grey;
+  background-color: #e4e4ea;
   border: none;
   overflow: visible;
 }
@@ -201,10 +201,10 @@ pre {
 pre code {
   margin: 0;
   padding: 0.75rem;
-  background: $brand-lighter;
+  background: $pre-background;
   color: $brand-med;
-  border: 1px solid rgba($brand, 0.25);
   border-radius: $br;
+  border: 1px solid $brand-lightest;
 
 }
 
