update typography variable

--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -176,7 +176,7 @@ hr {
   box-sizing: content-box;
   height: 1px;
   margin: 1rem 0;
-  background-color: #e4e4ea;
+  background-color: $lightgrey;
   border: none;
   overflow: visible;
 }
