updated most colours and removed link section

--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -1,5 +1,5 @@
 
-// -- Colour -- //
+// -- Old Colours -- //
 $brand: #00b298;
 $brand-lighter: #e9f9f6;
 $brand-light: #4dd6b2;
@@ -8,6 +8,52 @@ $brand-dark: #0e6b64;
 $brand-lightest:#d4e5de;
 $brand-mint: #ecf9f7;
 $pre-background: #eef6f4;
+
+/// -- Brand New Colours -- //
+// ----------------------- //
+$jade-50: #ecf9f5;
+$jade-100: #68ccb1;
+$jade-300: #00b298;
+$jade-500: #008579;
+$jade-700: #0e6b64;
+
+
+$amethyst-50: #e8e9f1;
+$amethyst-100: #9d9fbc;
+$amethyst-300: #787a97;
+$amethyst-500: #5d5f7a;
+$amethyst-700: #464855;
+
+$amber-50: #fee5a0;
+$amber-100: #f5be44;
+$amber-300: #da9f18;
+
+$mint-50: #ebf4f1;
+$mint-100: #d2e6de;
+
+// New UI Colours
+$ruby-50: #fcefed;
+$ruby-300: #e96654;
+$ruby-500: #d93939;
+$ruby-700: #b31a1a;
+
+$emerald-50: #e9f7e6;
+$emerald-300: #24b33b;
+$emerald-500: #0a884e;
+$emerald-700: #086749;
+
+// New Neutrals
+$pearl-50: #f7f7f8;
+$pearl-100: #e4e4ea;
+$pearl-300: #d0d0d9;
+$pearl-500: #86868f;
+$pearl-700: #606068;
+$pearl-900: #37373f;
+
+$white: #fff;
+
+/// -- Brand New Colours -- //
+// ----------------------- //
 
 $color2: #4464e4;
 $color2-light: #7994fe;
