--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -35,7 +35,7 @@ textarea {
   line-height: 1.375rem;
   margin: 0;
   padding: 0;
-  color: $black;
+  color: $pearl-900;
 
   // -- font smooving
   -webkit-font-smoothing: antialiased;
@@ -119,9 +119,9 @@ small { font-size: 0.875rem; }
 a,
 button {
   font-weight: normal;
-  color: #00b298;
+  color: $jade-500;
   text-decoration: underline;
-  text-decoration-color: #4dd6b2;
+  text-decoration-color: rgba(0, 178, 152, 0.6);
   // text-decoration-skip-ink: auto;
   display: inline-block;
   -moz-appearance: none;
@@ -138,8 +138,8 @@ a:hover,
 a:focus,
 button:hover,
 button:focus {
-  text-decoration-color: #00b298;
-  color: #008579;
+  text-decoration-color: rgba(0, 178, 152, 0.6);
+  color: $jade-500;
   background-color: #e0f5f2;
   transition: all 150ms ease;
   text-decoration: none;
@@ -148,7 +148,7 @@ button:focus {
 a:active,
 a:focus {
   text-decoration: none;
-  color: #00b298;
+  color: $jade-300;
 }
 
 input {
@@ -176,7 +176,7 @@ hr {
   box-sizing: content-box;
   height: 1px;
   margin: 1rem 0;
-  background-color: $lightgrey;
+  background-color: $pearl-100;
   border: none;
   overflow: visible;
 }
@@ -201,7 +201,7 @@ pre {
 pre code {
   margin: 0;
   padding: 0.75rem;
-  background: $pre-background;
+  background: $jade-50;
   color: $brand-med;
   border-radius: $br;
   border: 1px solid $brand-lightest;
@@ -212,4 +212,4 @@ pre code {
   font-feature-settings: "kern", "liga", "tnum", "ss02", "ss04";
 }
 
-.subtle { color: rgba($black, 0.77); }
+.subtle { color: rgba($pearl-900, 0.77); }
