--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,8 +1,8 @@
 @import 'base/variables';
 @import 'base/fonts';
-@import 'base/mixins';
+// @import 'base/mixins';
 @import 'base/typography';
 @import 'layout/lists';
-@import 'layout/buttons';
+// @import 'layout/buttons';
 
 @import '~animate.css/animate.css';
