--- a/src/styles/base/typography.scss
+++ b/src/styles/base/typography.scss
@@ -59,76 +59,143 @@ menu {
 }
 
 h1, .h1 {
-  font-size: 2.25rem;
-  line-height: 3rem;
-  margin: 1.875rem 0 1rem;
   font-weight: bold;
+  font-size: 1.625rem;
+  line-height: 2rem;
+  padding: 0;
+  margin: 2rem 0 1rem;
 }
 
-h2 {
-  font-size: 1.875rem;
-  line-height: 2.25rem;
-  margin: 1.875rem 0 1rem;
+h2, .h2 {
   font-weight: bold;
-}
-
-h3 {
   font-size: 1.5rem;
   line-height: 1.875rem;
-  margin: 1.5rem 0 1rem;
-  font-weight: bold;
+  padding: 0;
+  margin: 1.875rem 0 1rem;
 }
 
-h4 {
+h3, .h3 {
+  font-weight: bold;
   font-size: 1.25rem;
-  line-height: 1.625rem;
-  margin: 1.25rem 0 1rem;
-  font-weight: bold;
+  line-height: 1.75rem;
+  padding: 0;
+  margin: 1.75rem 0 1rem;
 }
 
-h5 {
+h4, .h4 {
+  font-weight: bold;
   font-size: 1.125rem;
   line-height: 1.5rem;
-  margin: 1.125rem 0 1rem;
+  padding: 0;
+  margin: 1.5rem 0 1rem;
+}
+
+h5, .h5 {
   font-weight: bold;
+  font-size: 1rem;
+  line-height: 1.25rem;
+  padding: 0;
+  margin: 1.25rem 0 1rem;
+}
+
+@media #{$screen-width-medium} {
+  h1, .h1 {
+    font-size: 2.25rem;
+    line-height: 3rem;
+    margin: 3rem 0 1rem;
+  }
+
+  h2, .h2 {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+    margin: 2.25rem 0 1rem;
+  }
+
+  h3, .h3 {
+    font-size: 1.5rem;
+    line-height: 1.875rem;
+    margin: 1.875rem 0 1rem;
+  }
+
+  h4, .h4 {
+    font-size: 1.25rem;
+    line-height: 1.625rem;
+    margin: 1.625rem 0 1rem;
+  }
+
+  h5, .h5 {
+    font-size: 1.125rem;
+    line-height: 1.5rem;
+    margin: 1.5rem 0 1rem;
+  }
 }
 
 p {
-  font-size: 1rem;
-  line-height: $baseline-height;
+  padding: 0;
   margin: 0 0 1rem;
-
-  &.large {
-    font-size: 1.125rem;
-    line-height: 1.5rem;
-  }
-
-  &.small {
-    font-size: 0.875rem;
-    line-height: 1.25rem;
-    margin: 0.875rem 0;
-  }
 }
 
-strong { font-weight: bold; }
+p.large {
+  font-size: 1.125rem;
+  line-height: 1.5rem;
+  margin: 0 0 1.125rem;
+}
 
-em { font-style: italic; }
+small, .small {
+  font-size: 0.875rem;
+}
 
-small { font-size: 0.875rem; }
+sup {
+  font-size: 0.5em;
+  line-height: 0.5em;
+}
 
-a {
+label {
+  display: block;
+  margin: 1rem 0 0;
+  font-weight: bold;
+
+  &.label-inline { margin: 0.5rem 0.25rem; }
+}
+
+strong, b, .strong { font-weight: bold; }
+em, i, var, .em { font-style: normal; }
+
+input, button, select, textarea { font-family: inherit; }
+
+var { font-style: normal; }
+
+.tab-numbers {
+  font-feature-settings: "kern", "liga", "tnum", "ss02", "ss04";
+}
+
+.subtle { color: rgba(55, 55, 63, 0.77); }
+
+.capitalize { text-transform: capitalize; }
+.uppercase { text-transform: uppercase; }
+
+.center { text-align: center; }
+
+a, .link {
   color: $jade-500;
   text-decoration: underline;
-  transition: all 150ms ease;
   cursor: pointer;
+  &:visited { color: $jade-700; }
+  &:hover, &:focus { color: $jade-700; }
+  &.href-plain { text-decoration: none; }
+  &.inherit { color: inherit; }
 }
 
-a:hover,
-a:focus,
-a:active {
-  color: $jade-300;
-  transition: all 150ms ease;
-  text-decoration: underline;
+strong, b, .strong { font-weight: bold; }
+em, i, var, .em { font-style: normal; }
+
+hr {
+  box-sizing: content-box;
+  height: 1px;
+  margin: 1rem 0;
+  background-color: $pearl-100;
+  border: none;
+  overflow: visible;
 }
 
 button {
@@ -147,11 +214,11 @@ button {
 }
 
 input {
-  margin: $spacing-small 0;
-  border-radius: $spacing-tiny;
-  border: 1px solid $grey;
-  padding: $spacing-tiny;
-  background-color: $verylightgrey;
+  margin: 0.5rem 0;
+  border-radius: 0.25rem;
+  border: 1px solid $pearl-300;
+  padding: 0.25rem;
+  background-color: $pearl-50;
 }
 
 ol {
@@ -161,15 +228,6 @@ ol {
 ul {
   padding: 0;
   margin: 0 0 1rem;
-}
-
-hr {
-  box-sizing: content-box;
-  height: 1px;
-  margin: 1rem 0;
-  background-color: $pearl-100;
-  border: none;
-  overflow: visible;
 }
 
 /* stylelint-disable */
@@ -194,9 +252,9 @@ pre code {
   margin: 0;
   padding: 0.75rem;
   background: $jade-50;
-  color: $brand-med;
-  border-radius: $br;
-  border: 1px solid $brand-med;
+  color: $jade-500;
+  border-radius: 0.25rem;
+  border: 1px solid $jade-100;
 
 }
 
