--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -1,14 +1,3 @@
-
-// -- Old Colours -- //
-$brand: #00b298;
-$brand-lighter: #e9f9f6;
-$brand-light: #4dd6b2;
-$brand-med: #008f7a;
-$brand-dark: #0e6b64;
-$brand-lightest:#d4e5de;
-$brand-mint: #ecf9f7;
-$pre-background: #eef6f4;
-
 /// -- Brand New Colours -- //
 // ----------------------- //
 $jade-50: #ecf9f5;
@@ -52,68 +41,17 @@ $pearl-900: #37373f;
 
 $white: #fff;
 
-/// -- Brand New Colours -- //
-// ----------------------- //
-
-$color2: #4464e4;
-$color2-light: #7994fe;
-$color2-med: #2f3ecc;
-$color2-dark: #252fa5;
-
-$color3: #84ce05;
-$color3-med: #5ab700;
-$color3-dark: #289100;
-
-$color4: #9b76ff;
-$color4-med: #7154ea;
-$color4-dark: #4c40bc;
-
-$alert: #e96654;
-$alert-lighter: #f3dbd9;
-$alert-light: #fd8f74;
-$alert-med: #d23d3d;
-$alert-dark: #b92028;
-
-$warning: #f0b911;
-
-$negative: $alert;
-
-// -- Greyscale -- //
-$white: #fff;
-$verylightgrey: #f6f7f8;
-$lightgrey:  #e4e4ea;
-$grey: #dfdfdf;
-$darkgrey: #bbb;
-$lightblack: #777;
-$black: #303030;
-
-// -- Spacing sizes -- //
-$spacing: 1rem;
-$spacing-tiny: $spacing*0.25;
-$spacing-small: $spacing*0.5;
-$spacing-med: $spacing*0.75;
-$spacing-large: $spacing*3;
-$spacing-huge: $spacing*4;
-
-// -- Border Radius -- //
-$br: $spacing-tiny;
-
-// -- Button Sizes -- //
-$button-height: 2rem;
-$baseline-height: 1.375rem;
-
 // -- Font Stacks -- //
 $body-font: "GT-Walsheim", "Avenir", "Helvetica Neue", Helvetica, Arial, sans-serif !default;
 $header-font: "GT-Walsheim", sans-serif !default;
 
 // -- Media Queries -- //
-$sw-small: 'screen and (max-width: 32em)'; // use sparingly
-$sw-medium: 'screen and (min-width: 32em)';
-$sw-large: 'screen and (min-width: 52.25em)';
-$sw-xlarge: 'screen and (min-width: 75em)';
+$screen-width-small: 'screen and (min-width: 32rem)';
+$screen-max-small: 'screen and (max-width: 47.999rem)'; // use sparingly
+$screen-width-medium: 'screen and (min-width: 48rem)';
+$screen-width-large: 'screen and (min-width: 64rem)';
+$screen-width-xlarge: 'screen and (min-width: 96rem)';
 
-// --  -- //
-
-@media #{$sw-medium} {
-  $baseline-height: 1.45rem;
-}
+$min-width: 48rem;
+$mid-width: 64rem;
+$max-width: 96rem;
