--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,6 +2,7 @@
 @import 'base/fonts';
 // @import 'base/mixins';
 @import 'base/typography';
+@import 'layout/structure';
 @import 'layout/lists';
 @import 'layout/inputs';
 // @import 'layout/buttons';
