--- a/src/styles/layout/inputs.scss
+++ b/src/styles/layout/inputs.scss
@@ -6,7 +6,7 @@
   background: transparent;
   border-radius: 1rem;
   text-decoration: none;
-  line-height: 1.375rem;
+  line-height: 1.5rem;
   cursor: pointer;
 
   span {
@@ -14,9 +14,9 @@
     border-radius: 1rem;
     display: inline-block;
 
-    &:first-child { padding-right: 0; }
+    &:first-child:not([data-active="true"]) { padding-right: 0.25rem; }
 
-    &:last-child { padding-left: 0; }
+    &:last-child:not([data-active="true"]) { padding-left: 0.25rem; }
 
     &[data-active="true"] {
       background: $jade-300;
