colour and styles

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,6 +3,7 @@
 // @import 'base/mixins';
 @import 'base/typography';
 @import 'layout/structure';
+@import 'layout/containers';
 @import 'layout/lists';
 @import 'layout/inputs';
 // @import 'layout/buttons';
