re-instate width variables

--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -55,4 +55,7 @@ $screen-width-medium: 'screen and (min-width: 48rem)';
 $screen-width-large: 'screen and (min-width: 64rem)';
 $screen-width-xlarge: 'screen and (min-width: 96rem)';
 
+// -- Panel Widths-- //
+$min-width: 48rem;
+$mid-width: 64rem;
 $max-width: 96rem;
