--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -5,7 +5,7 @@ $jade-100: #68ccb1;
 $jade-300: #00b298;
 $jade-500: #008579;
 $jade-700: #0e6b64;
-
+$jade-900: #10504e;
 
 $amethyst-50: #e8e9f1;
 $amethyst-100: #9d9fbc;
